clusters/home/apps/convertx/convertx/configs/convertx-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: convertx-ingressroute
  namespace: convertx
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://convertx.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: ConvertX
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: mdi-video
    gethomepage.dev/app: convertx # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: ConvertX
    #gethomepage.dev/widget.type: "convertx"
    #gethomepage.dev/widget.url: "https://convertx.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`convertx.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: convertx
      port: 3000
  tls:
    secretName: metube-certificate-secret
